Feat: overlay aggiunto all'html e css, ora procedo a nasconderlo e a fare le successive operazioni

--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,13 @@
     <h1>ESTATE '24</h1>
   </header>
   <main>
+
+    <!-- Overlay -->
+    <div class="overlay hidden">
+      <button id="closeBtn">Chiudi</button>
+      <img src="" alt="Overlay Image">
+    </div>
+
     <div class="grid">
       <!-- Genero le card e il loro contenuto attraverso javascript -->
       <div class="card">
